# boost-memory-mapped-file-playground

./: CMakeLists.txt  README.md
src/: main.cpp
